# QualificationsGetWebApp

./: .gitignore  .gitpod.yml  package.json
.idx/: dev.nix
backend/: .gitignore  Cargo.toml  README.md  bun.lockb  package-lock.json  package.json
backend/convex/: exam.ts  quiz.ts  schema.ts  selection.ts  tasks.js
backend/convex/_generated/: api.d.ts
backend/src/: main.rs
src/: main.rs
